[package]
name = "popcorn"
version = "0.1.0"
authors = ["Hollin Wilkins <hollinrwilkins@gmail.com>"]
description = "Popcorn: Start popping kernels on your CPUs and GPUs"
repository = "https://github.com/combust/popcorn"
readme = "README.md"
keywords = ["ml", "tensor", "gpu"]
license = "Apache-2.0"

[dependencies]
futures = "0.1.13"
futures-cpupool = "0.1.5"

[features]
default = ["native", "cuda", "opencl"]
native = []
cuda = []
opencl = []

[workspace]
members = ["popcorn-blas", "popcorn-nn", "popcorn-butter"]
