[package]
name = "popcorn-butter"
version = "0.1.0"
authors = ["Hollin Wilkins <hollinrwilkins@gmail.com>"]
description = "Popcorn Butter: Use Popcorn engine with a graph execution engine"
repository = "https://github.com/combust/popcorn"
readme = "../README.md"
keywords = ["ml", "tensor", "gpu"]
license = "Apache-2.0"

[dependencies]
futures = "0.1.13"
futures-cpupool = "0.1.5"

[dependencies.popcorn]
path = ".."
version = "0.1"

[dependencies.popcorn-blas]
path = "../popcorn-blas"
version = "0.1"
